# Project1

./: Schema.py  Services.py  alembic.ini  database.py  env  logger.py  main.py  model.py  pyproject.toml
alembic/versions/: 9cbf8339ff91_employee.py
