[tool.poetry]
name = "pyproject-toml"
version = "0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.10.4"
boto3 = "^1.21.41"
toml = "^0.10.2"
pathlib = "^1.0.1"
fastapi = "^0.95.1"
SQLAlchemy = "<2.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
psycopg2 = "^2.9.3"
tomlkit = "^0.10"
psycopg2-binary = "^2.9.5"
httpx = "^0.24.0"
opentelemetry-api = "^1.15.0"
opentelemetry-instrumentation = "^0.36b0"
opentelemetry-sdk = "^1.15.0"
opentelemetry-instrumentation-fastapi = "^0.36b0"
opentelemetry-instrumentation-requests = "^0.36b0"
opentelemetry-ext-honeycomb = "0.16b0"
loguru = "^0.7.0"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"


[tool.poetry.scripts]
tests = 'build_scripts.base_setup.py'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

